package entidades;

public class Arqueiro extends Atirador {
  public Arqueiro() {
    super(12, 0.8, 20);
  }

  @Override
  protected void adicionarAcoes() {
  }
}
