package entidades;

public class Pistoleiro extends Atirador {
  public Pistoleiro() {
    super(25, 0.6, 9);
  }

  @Override
  protected void adicionarAcoes() {
  }
}
